cluster-api-provider-openstack/templates/namespace-0.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-openstack
  name: capo-system
