cluster-api-provider-openstack/templates/deployment-0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-openstack
    control-plane: capo-controller-manager
  name: capo-controller-manager
  namespace: capo-system
spec:
  replicas: 1
  selector:
    matchLabels:
      cluster.x-k8s.io/provider: infrastructure-openstack
      control-plane: capo-controller-manager
  template:
    metadata:
      labels:
        cluster.x-k8s.io/provider: infrastructure-openstack
        control-plane: capo-controller-manager
    spec:
      containers:
      - args:
        - --leader-elect
        - --v=2
        - --metrics-bind-addr=127.0.0.1:8080
        command:
        - /manager
        image: gcr.io/k8s-staging-capi-openstack/capi-openstack-controller:dev
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthz
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 9440
          name: healthz
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthz
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      serviceAccountName: capo-manager
      terminationGracePeriodSeconds: 10
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: capo-webhook-service-cert
