cluster-api-provider-openstack/templates/mutatingwebhookconfiguration-0.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capo-system/capo-serving-cert
  labels:
    cluster.x-k8s.io/provider: infrastructure-openstack
  name: capo-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: capo-webhook-service
      namespace: capo-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-openstackcluster
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: default.openstackcluster.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1alpha5
    operations:
    - CREATE
    - UPDATE
    resources:
    - openstackclusters
  sideEffects: None
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: capo-webhook-service
      namespace: capo-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-openstackclustertemplate
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: default.openstackclustertemplate.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1alpha5
    operations:
    - CREATE
    - UPDATE
    resources:
    - openstackclustertemplates
  sideEffects: None
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: capo-webhook-service
      namespace: capo-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha5-openstackmachine
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: default.openstackmachine.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1alpha5
    operations:
    - CREATE
    - UPDATE
    resources:
    - openstackmachines
  sideEffects: None
